[tool.poetry]
name = "test_flows"
version = "0.1.0"
description = "Test flows for Metaflow hacking"
authors = ["Kevin Smith <kevin@outerbounds.co>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kubernetes = "^24.2.0"
PyYAML = "^6.0"
taichi = "^1.1.2"
metaflow = "^2.7.10"
azure-storage-blob = "^12.14.1"
azure-identity = "^1.11.0"
google-cloud-storage = "^2.5.0"
google-auth = "^2.13.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
